# machine-learning-projects

./: .gitignore  README.md
.ipynb_checkpoints/: Introduction_adversarial_robustness-checkpoint.ipynb
MLOps/mlflow-tracking-example/: .gitignore  LICENSE  Makefile  README.md  data.dvc  models.dvc  pyproject.toml  requirements.txt
MLOps/mlflow-tracking-example/.dvc/: config
MLOps/mlflow-tracking-example/docs/: mkdocs.yml
MLOps/mlflow-tracking-example/docs/docs/: index.md
MLOps/mlflow-tracking-example/mlops-mlflow-tracking/: __init__.py  dataset.py  features.py  plots.py  serve_model.bat  serve_model.sh
MLOps/mlflow-tracking-example/mlops-mlflow-tracking/modeling/: predict.py  train.py
MLOps/mlflow-tracking-example/notebooks/: .gitignore  1.ira_mlflow_tracking_MedMNIST.ipynb  2.ira_mlflow_inference.ipynb  3.ira_extract_img_to_inference.ipynb  4.demo_data_drift.ipynb  data.json
data-science/: deep-significance.ipynb
deep-learning/: vanishing_gradient.ipynb
deep-learning-basics/: vanishing_gradient.ipynb
energy-generation-analysis/: .gitignore  main.ipynb  utils.py
fake-data/: people_for_marie.csv
gaussian-classifier/: Gaussian Classifier for Generative Data Model.ipynb  Gaussian Classifier.ipynb
general/: download_svg.ipynb
generative-ai/: generative_pipeline_cifar10.ipynb
journal-conference-ai-analysis/: 10-year-analysis.ipynb
knn-recommendation-system/: id_to_movie_name.json  knnpickle_file.pkl  movie_name_to_id.json  movie_user_matrix_sparse.npz
ml-adversarial-robustness/: ART_MACFE.ipynb  ART_scikitlearn.ipynb  ART_testing.ipynb  (+2 more)
(+211 files in other folders)
