[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "mlops-mlflow-tracking"
version = "0.0.1"
description = "MICAI 2024 Tutorial for MLOps for Medical Imaging Made Easy"
authors = [
  { name = "Ivan Reyes" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.10"

[tool.black]
line-length = 99
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.venv
)/
'''

[tool.ruff.lint.isort]
known_first_party = ["mlops-mlflow-tracking"]
force_sort_within_sections = true
